Fixed: Layout issue not allowing 'on scroll' to be called.

--- a/dictionary/static/dictionary/custom.css
+++ b/dictionary/static/dictionary/custom.css
@@ -1,7 +1,3 @@
-button.entry:hover, button.entry:active {
-    background-color: #007bff;
-}
-
 .modal-header-primary {
 	color:#fff;
     background-color: #007bff;
